# netrun-app

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
netrun/: __init__.py  __main__.py  engine.py  netrun.py  runner.py
netrun/api/: cisco_api.py  netrun_api.py
netrun/config/: device_dictionary.json  operations.py
netrun/subsystems/api/: cisco.py  netman.py
netrun/subsystems/configurations/: config_diff.py
netrun/subsystems/database/: operations.py
netrun/subsystems/runner/: runner.py
netrun/subsystems/strategies/: strategies.py
netrun/utils/api/: cisco_api.py  netrun_api.py
netrun/utils/configurations/: config_diff.py
netrun/utils/database/: device_dictionary.json  operations.py
netrun/utils/strategies/: strategies.py
